WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242894
REGRESSION(iOS 15.2) [iOS] "Cross-Origin-Opener-Policy: same-origin" breaks forms after back action
https://bugs.webkit.org/show_bug.cgi?id=242894
Summary
REGRESSION(iOS 15.2) [iOS] "Cross-Origin-Opener-Policy: same-origin" breaks f...
Andy Ingram
Reported
2022-07-19 03:53:04 PDT
Created
attachment 461009
[details]
video-of-repro-demo # Summary On iOS Safari 15.5, if a page sets `Cross-Origin-Opener-Policy: same-origin` and a user navigates back to the page via the back button, form elements on that page aren't correctly interactive. Demo site:
https://safari-bug-andy26.vercel.app
# Details 1. User is on a page without a COOP header (
https://safari-bug-andy26.vercel.app
) 2. User clicks a link to a page that sets COOP same-origin (
https://safari-bug-andy26.vercel.app/api
) 3. User submits a GET form with no action, or an action which is the same page - such that the same page is loaded with different query parameters. (
https://safari-bug-andy26.vercel.app/api?select=day&search
=) 4. User hits back button to return to the original form (
https://safari-bug-andy26.vercel.app/api
) 5. Form elements aren't correctly interactive. They can receive focus, but the keyboard isn't opened for text inputs, and the select box UI isn't shown for selects.
Attachments
video-of-repro-demo
(6.68 MB, video/quicktime)
2022-07-19 03:53 PDT
,
Andy Ingram
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-07-19 07:22:27 PDT
<
rdar://problem/97258473
>
Chris Dumez
Comment 2
2022-07-19 16:10:16 PDT
Thanks for the bug report, I am working on it.
Chris Dumez
Comment 3
2022-07-19 16:23:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2569
EWS
Comment 4
2022-07-20 12:34:57 PDT
Committed
252651@main
(2e2b021f6768): <
https://commits.webkit.org/252651@main
> Reviewed commits have been landed. Closing PR #2569 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug